@@ -122,7 +122,7 @@
   <mediaobject>
 
    <imageobject>
-    <imagedata align="center" width="6in" scalefit="1"
+    <imagedata align="center" width="6in" scale="50" scalefit="1"
                fileref="cl_probe.png"></imagedata>
    </imageobject>
 
