@@ -24,7 +24,7 @@
   <mediaobject>
 
    <imageobject>
-    <imagedata align="center" width="6in" scalefit="1"
+    <imagedata align="center" width="6in" scale="50" scalefit="1"
                fileref="cl_tailor.png"></imagedata>
    </imageobject>
 
