@@ -369,7 +369,7 @@
      <mediaobject>
 
       <imageobject>
-       <imagedata align="center" width="6in" scalefit="1"
+       <imagedata align="center" width="6in" scale="50" scalefit="1"
                   fileref="uc_maint.png"></imagedata>
       </imageobject>
 
@@ -665,7 +665,7 @@
      <mediaobject>
 
       <imageobject>
-       <imagedata align="center" width="6in" scalefit="1"
+       <imagedata align="center" width="6in" scale="50" scalefit="1"
                   fileref="uc_tailor.png" />
       </imageobject>
 
@@ -974,7 +974,7 @@
      <mediaobject>
 
       <imageobject>
-       <imagedata align="center" width="6in" scalefit="1"
+       <imagedata align="center" width="6in" scale="50" scalefit="1"
                   fileref="uc_softdev.png" />
       </imageobject>
 
@@ -1170,7 +1170,7 @@
      <mediaobject>
 
       <imageobject>
-       <imagedata align="center" width="6in" scalefit="1"
+       <imagedata align="center" width="6in" scale="50" scalefit="1"
                   fileref="uc_kit.png" />
       </imageobject>
 
